Rewrite nearby locations function by hand